--- a/src/components/CurrentDayCard/CurrentDayCard.scss
+++ b/src/components/CurrentDayCard/CurrentDayCard.scss
@@ -1,10 +1,23 @@
-$card-content-color: #ffffff;
+$card-content-color: #102342;
 
 #card-active {
-  width: 200px;
+  width: 400px;
   margin-left: 50px;
   color: $card-content-color;
   display: inline-block;
+
+  #city-name {
+    font-size: 80px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+  }
+
+
+  .current-weather-icon {
+    margin-left: 20px;
+    display: inline-block;
+    align-items: center;
+  }
 }
 
 #current-temperature {
@@ -14,6 +27,7 @@ $card-content-color: #ffffff;
 }
 
 #active-weather-type {
+  display: inline-block;
   font-size: 30px;
   margin-top: 1px;
 }
